traversal.snake.Snake.scala.error
Compilation error:
Snake:19: error: Boolean does not take parameters
        {
        ^